[tool.poetry]
name = "cpe-prediction"
version = "0.1.0"
description = "Predicting CPE for marketing campaigns"
authors = ["Amanda <amanda.ferraboli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "1.4.2"
pandas = "2.2.2"
shap = "0.45.0"
xgboost = "2.0.3"
jupyterlab = "^4.1.8"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
spacy = "^3.7.4"
ipywidgets = "^8.1.2"
scikit-optimize = "^0.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
